--- a/frappe/templates/includes/navbar/navbar_login.html
+++ b/frappe/templates/includes/navbar/navbar_login.html
@@ -24,6 +24,6 @@
 	</ul>
 </li>
 {% if not hide_login %}
-<li class="btn-login-area"><a href="/login">{{ _("Login") }}</a></li>
+<!-- <li class="btn-login-area"><a href="/login">{{ _("Login") }}</a></li> -->
 {% endif %}
 {% endif %}
