--- a/frappe/templates/print_formats/standard_macros.html
+++ b/frappe/templates/print_formats/standard_macros.html
@@ -33,7 +33,12 @@
 						{% for tdf in visible_columns %}
 						{% if (not data[0].flags.compact_item_print) or tdf.fieldname in doc.get(df.fieldname)[0].flags.compact_item_fields %}
 							<th style="width: {{ get_width(tdf) }};" class="{{ get_align_class(tdf) }}" {{ fieldmeta(df) }}>
-								{{ _(tdf.label) }}</th>
+								{% if (tdf.print_label)%}
+								{{ _(tdf.print_label) }}
+								{%- else -%}
+								{{ _(tdf.label) }}
+								{% endif %}
+							</th>
 						{% endif %}
 						{% endfor %}
 					</tr>
@@ -63,7 +68,7 @@ data-fieldname="{{ df.fieldname }}" data-fieldtype="{{ df.fieldtype }}"
 
 {%- macro render_field_with_label(df, doc) -%}
 		<div class="row {% if df.bold %}important{% endif %} data-field" {{ fieldmeta(df) }}>
-			<div class="col-xs-{{ "9" if df.fieldtype=="Check" else "5" }}
+			<div class="print_label col-xs-{{ "9" if df.fieldtype=="Check" else "4" }}
 				{%- if doc._align_labels_right %} text-right{%- endif -%}">
 
 				{% if df.fieldtype not in ("Image","HTML","Check") and
@@ -75,7 +80,7 @@ data-fieldname="{{ df.fieldname }}" data-fieldtype="{{ df.fieldtype }}"
 				<label>{{ _(df.label) }}</label>
 				{% endif %}
 			</div>
-			<div class="col-xs-{{ "3" if df.fieldtype=="Check" else "7" }}
+			<div class="col-xs-{{ "3" if df.fieldtype=="Check" else "8" }}
 			{{ get_align_class(df) }} value">
 				{% if doc.get(df.fieldname) != None -%}
 					{{ print_value(df, doc) }}{% endif %}
@@ -244,8 +249,8 @@ data-fieldname="{{ df.fieldname }}" data-fieldtype="{{ df.fieldtype }}"
 
 			{% endif %}
 			
-	{% else %}
-	 <div id="variables" style="display: none;"><span id="margin-bottom">25mm</span></div>
+	<!-- {% else %}
+	 <div id="variables" style="display: none;"><span id="margin-bottom">25mm</span></div> -->
 	{% endif %}
 	</div>
 	<!-- <p class="text-right small page-number visible-pdf">
