--- a/frappe/public/css/bootstrap.css
+++ b/frappe/public/css/bootstrap.css
@@ -4156,9 +4156,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-brand {
   float: left;
   height: 40px;
-  padding: 10px 15px;
+  padding: 10px !important;
   font-size: 18px;
-  line-height: 20px;
+  /* line-height: 20px; */
 }
 .navbar-brand:hover,
 .navbar-brand:focus {
@@ -4170,7 +4170,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 @media (min-width: 768px) {
   .navbar > .container .navbar-brand,
   .navbar > .container-fluid .navbar-brand {
-    margin-left: -15px;
+    /* margin-left: -15px; */
   }
 }
 .navbar-toggle {
