--- a/frappe/public/css/mobile.css
+++ b/frappe/public/css/mobile.css
@@ -26,7 +26,7 @@ body {
     margin-top: 12px;
   }
   body[data-route^="Form"] .page-title h1.editable-title {
-    padding-right: 80px;
+    padding-right: 10px;
   }
   body[data-route^="Form"] .page-title .indicator {
     display: inline-block;
@@ -40,10 +40,11 @@ body {
   body[data-route^="Form"] .page-head .sub-heading {
     font-weight: normal;
     font-size: 10px;
-    display: block;
-    position: absolute;
-    right: 140px;
-    min-width: 200px;
+    /* display: block; */
+    /* position: absolute; */
+    /* right: 140px; */
+    /* min-width: 200px; */
+	    /* width: calc(100% - 150px); */
   }
   body[data-route^="Form"] .title-text {
     margin-top: 10px;
@@ -66,7 +67,7 @@ body {
   }
   #navbar-breadcrumbs {
     margin: 0px;
-    display: inline-block;
+    /* display: inline-block; */
     max-width: 150px;
     overflow: hidden;
     white-space: nowrap;
@@ -142,7 +143,7 @@ body {
     display: inline-block !important;
     padding-left: 0px;
     margin-left: 0px;
-    padding-top: 6px;
+    /* padding-top: 6px; */
   }
   body.no-breadcrumbs .navbar .navbar-home:before {
     font-family: FontAwesome;
@@ -168,7 +169,9 @@ body {
   }
   body[data-route=""] .navbar .navbar-home,
   body[data-route="desktop"] .navbar .navbar-home {
-    padding: 8px 10px;
+    /* padding: 8px 10px; */
+	padding-left: 10px;
+	padding-right:10px;
   }
   body[data-route=""] .navbar .navbar-home:before,
   body[data-route="desktop"] .navbar .navbar-home:before {
@@ -187,7 +190,7 @@ body {
   }
   body[data-sidebar="0"] #navbar-breadcrumbs,
   body[data-sidebar="0"] .navbar-home {
-    margin-left: 15px !important;
+    /* margin-left: 15px !important; */
   }
 }
 @media (max-width: 991px) and (max-width: 480px) {
@@ -336,7 +339,9 @@ body {
     text-align: left;
   }
   body[data-route^="Form"] .page-head .sub-heading {
-    right: 90px;
+    /* right: 90px; */
+	    /* width: calc(100% - 150px); */
+	/* width:25%; */
   }
   .timeline::before {
     content: none;
@@ -408,3 +413,5 @@ body {
     /*Height of avtar image -36px to align text center vertically*/
   }
 }
+
+
