--- a/frappe/public/css/navbar.css
+++ b/frappe/public/css/navbar.css
@@ -79,8 +79,11 @@
 }
 .dropdown-help .dropdown-menu {
   width: 350px !important;
-  max-height: 440px;
+  max-height: 80vh;
   overflow: auto;
+}
+ul#dropdown-notification {
+    max-height: 80vh !important;
 }
 .dropdown-help .dropdown-menu .input-group {
   width: 100%;
@@ -214,9 +217,19 @@
   display: inline-block;
 }
 .toggle-sidebar {
-  margin-right: 10px;
+  /* margin-right: 10px; */
 }
 .navbar-default .navbar-nav > li > a,
 .navbar-default .navbar-brand {
   color: #8D99A6;
+}
+
+.navbar .container {
+    padding-left: 5px !important;
+	
+}
+
+.container > .navbar-header
+{
+	margin-left: 0 !important;
 }
