--- a/frappe/public/js/frappe/form/templates/print_layout.html
+++ b/frappe/public/js/frappe/form/templates/print_layout.html
@@ -26,14 +26,16 @@
 		<div class="col-xs-4 text-right">
             <!-- <a class="close btn-print-close" style="margin-top: 2px; margin-left: 10px;">&times;</a> -->
             <div class="btn-group">
-                <a class="btn-print-print btn-sm btn btn-default">
-                    <strong>{%= __("Print") %}</strong></a>
+				<a class="hide btn-sign btn-sm btn btn-default">
+                    {%= __("Sign") %}</a>
+                <a class="hide btn-print-print btn-sm btn btn-default">
+                    {%= __("Print") %}</a>
     			<a class="btn-sm btn btn-default" href="#Form/Print Settings">
-                    {%= __("Settings...") %}</a>
+                    <i class="octicon octicon-gear"></i></a>
     			<a class="btn-print-edit btn-sm btn btn-default">
-                    {%= __("Customize...") %}</a>
-    			<a class="btn-print-preview btn-sm btn btn-default">
-                    {%= __("Full Page") %}</a>
+                    <i class="octicon octicon-pencil"></i></a>
+    			<a class="hide btn-print-preview btn-sm btn btn-default">
+                   <i class="octicon octicon-screen-full"></i></a>
     			<a class="btn-download-pdf btn-sm btn btn-default">
                     {%= __("PDF") %}</a>
             </div>
